# ml-project-template

./: .dockerignore  .pre-commit-config.yaml  BLOG.md  Dockerfile  GEMINI.md  README.md  Taskfile.yml  docker-compose.yml  pyproject.toml  setup_guide.md
.github/workflows/: ci.yml
src/: app.py  hello.py
tests/: test_hello.py
