[project]
name = "ml-project-template"
version = "0.1.0"
description = "Comprehensive ML/DL project"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy",
  "pandas",
  "scikit-learn",
  "tensorflow",
  "fastapi",
  "gunicorn",
  "uvicorn",
]

[project.optional-dependencies]
mlops = ["mlflow", "wandb", "dvc"]
nlp = ["transformers", "spacy"]
viz = ["matplotlib", "seaborn", "plotly"]
notebooks = ["jupyter", "jupyterlab"]

[tool.ruff]
target-version = "py312"
line-length = 120
fix = true
extend-exclude = ["notebooks/", "data/"]

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
    "jupyterlab>=4.4.4",
    "pre-commit>=4.2.0",
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
    "ruff>=0.12.4",
]
